<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddItemActivity"
    android:layout_margin="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerImageSlider"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/baseline_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></androidx.viewpager2.widget.ViewPager2>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/viewPagerImageSlider"
            tools:layout_editor_absoluteX="2dp">


            <TextView
                android:id="@+id/add_header"
                android:layout_width="251dp"
                android:layout_height="40dp"
                android:accessibilityHeading="true"
                android:text="Add Item"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/addTagButton"
                    android:layout_width="40dp"
                    android:layout_height="42dp"

                    android:background="@color/white"
                    android:clickable="true"

                    app:srcCompat="@drawable/addtag" />

                <ImageButton
                    android:id="@+id/addImageButton"
                    android:layout_width="40dip"
                    android:layout_height="42dip"

                    android:background="@color/white"
                    android:clickable="true"

                    app:srcCompat="@drawable/camera" />
            </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputItemName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:endIconMode="clear_text"
            app:helperText="*required"
            app:helperTextTextColor="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
            app:layout_constraintVertical_bias="0.0"
            app:startIconDrawable="@drawable/baseline_shopping_bag_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itemInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textPersonName"
                android:textColor="@color/purple" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputItemName">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                app:helperText="*required"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="@+id/inputMake"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputItemName"
                app:startIconDrawable="@drawable/value">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valueInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Value"
                    android:inputType="numberDecimal"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                app:helperText="*required"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="1.0"
                app:startIconDrawable="@drawable/date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date"
                    android:inputType="date"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputMake"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/make">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/makeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Make"
                    android:inputType="text"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputModel"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/model">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/modelInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Model"
                    android:inputType="text"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputSerialNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/qrcode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/serialNumberInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="SerialNumber"
                    android:inputType="text"
                    android:textColor="@color/purple" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/serialNumberScanButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:layout_weight="1"
                app:srcCompat="@drawable/qrcodescanner" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:startIconDrawable="@drawable/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:textColor="@color/purple" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDescription"
            app:startIconDrawable="@drawable/comments">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comments"
                android:inputType="textMultiLine"
                android:textColor="@color/purple" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comments">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Cancel" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:text="Confirm" />


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/comments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>