<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tag_item"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="40dp">

    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/addtag" />

    <TextView
        android:id="@+id/tag_text"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="8dp"
        android:ems="10"
        android:text="Tag Name"
        android:textSize="18sp"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="false"/>

</LinearLayout>
