<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp">

    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/addtag" />

    <EditText
        android:id="@+id/tag_text"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/input_field_round"
        android:drawablePadding="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="Tag Name"
        />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_gravity="center_vertical"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:src="@drawable/baseline_cancel_24" />

    <ImageButton
        android:id="@+id/edit_button"
        android:layout_gravity="center_vertical"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:src="@drawable/baseline_edit_24" />

</LinearLayout>